--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,15 +5,16 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+<div class="wordwrap">
+  You can also find my articles on 
+  <a href="https://orcid.org/0000-0002-9004-6218" target="_blank">my ORCID profile</a>.
+</div>
 
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
-  {% for category in site.publication_category  %}
+  {% for category in site.publication_category %}
     {% assign title_shown = false %}
     {% for post in site.publications reversed %}
       {% if post.category != category[0] %}
@@ -32,5 +33,10 @@ author_profile: true
   {% endfor %}
 {% endif %}
 
-
-
+<!-- ORCID embedded section -->
+<div style="text-align: center; margin-top: 30px;">
+    <iframe src="https://orcid.org/0000-0002-9004-6218" 
+            width="100%" height="600px" 
+            style="border:none; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.1);">
+    </iframe>
+</div>
