--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,9 +7,7 @@ author_profile: true
 
 <h1>Publications</h1>
 
-<p>My latest publications are available below. For a complete list, visit my 
-   <a href="https://orcid.org/0000-0002-9004-6218" target="_blank">ORCID profile</a>.
-</p>
+<p>My publications are available below. </p>
 
 <div id="orcid-publications">
     <p>Loading publications...</p>
@@ -25,14 +23,21 @@ author_profile: true
       const data = await response.json();
       const works = data.group;
       
-      let publicationsHTML = "<ul style='list-style-type: none; padding: 0;'>";
+      let publicationsHTML = "<ul class='publication-list'>";
       works.forEach(work => {
-        const title = work['work-summary'][0].title.title.value;
-        const year = work['work-summary'][0]['publication-date']?.year?.value || "N/A";
-        const link = work['work-summary'][0]['external-ids']['external-id'][0]?.url?.value || "#";
-        publicationsHTML += `<li style="margin-bottom: 15px;">
+        const summary = work['work-summary'][0];
+        const title = summary.title.title.value;
+        const year = summary['publication-date']?.year?.value || "N/A";
+        const journal = summary['journal-title'] ? summary['journal-title'].value : "Unknown Journal";
+        const authors = summary['contributors'] ? summary['contributors']['contributor'].map(a => a['credit-name'].value).join(', ') : "Various Authors";
+        const link = summary['external-ids']?.['external-id'][0]?.url?.value || "#";
+        const doi = summary['external-ids']?.['external-id'][0]?.value || "N/A";
+
+        publicationsHTML += `<li class="publication-item">
                               <strong>${title}</strong> (${year})  
-                              <br><a href="${link}" target="_blank" style="color: #007bff; text-decoration: none;">Read more</a>
+                              <br><em>${journal}</em>
+                              <br><span>Authors: ${authors}</span>
+                              <br>DOI: <a href="${link}" target="_blank">${doi}</a>
                              </li>`;
       });
       publicationsHTML += "</ul>";
@@ -48,22 +53,3 @@ author_profile: true
   fetchORCIDPublications();
 </script>
 
-<style>
-  #orcid-publications {
-      font-family: 'Arial', sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      background: #f9f9f9;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-
-  h1 {
-      text-align: center;
-      font-size: 2.5rem;
-      color: #2c3e50;
-  }
-</style>
