--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-<h1>Publications</h1>
+#<h1>Publications</h1>
 
 <p>My publications are available below. </p>
 
