--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,7 +13,7 @@ author_profile: true
 
 <script>
   async function fetchScholarRSS() {
-    const rssUrl = "https://scholar.google.com/citations?user=Q2w2smAAAAAJ&hl=en&oi=sra";
+    const rssUrl = "https://scholar.google.com/citations?user=Q2w2smAAAAAJ";
     
     try {
       const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${rssUrl}`);
