--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,12 @@ permalink: /publications/
 author_profile: true
 ---
 
-<p>My latest publications are available below. </p>
+<h1>Publications</h1>
+
+<p>My latest publications are available below. For a complete list, visit my 
+   <a href="https://scholar.google.com/citations?user=Q2w2smAAAAAJ" target="_blank">
+      Google Scholar profile</a>.
+</p>
 
 <div id="scholar-publications">
     <p>Loading publications from Google Scholar...</p>
@@ -13,16 +18,15 @@ author_profile: true
 
 <script>
   async function fetchScholarRSS() {
-    const rssUrl = "https://scholar.google.com/citations?user=Q2w2smAAAAAJ";
+    const rssUrl = "https://scholar.google.com/citations?user=Q2w2smAAAAAJ&hl=en&oi=sra";
     
     try {
       const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${rssUrl}`);
       const data = await response.json();
 
-      let publicationsHTML = "<ul style='list-style: none; padding: 0;'>";
+      let publicationsHTML = "<ul class='publication-list'>";
       data.items.forEach(item => {
-        publicationsHTML += `<li style="margin-bottom: 15px; border-left: 5px solid #007bff; 
-                              padding: 10px; background: #f9f9f9; border-radius: 5px;">
+        publicationsHTML += `<li class="publication-item">
                               <strong>${item.title}</strong>  
                               <br><a href="${item.link}" target="_blank" 
                               style="color: #007bff; text-decoration: none;">Read more</a>
